fix router bugs
